<resources>
    <string name="app_name">Inventory Tracker</string>
    <string name="main_activity_title">Products List</string>
    <string name="the_inventory_is_empty">The Inventory Is Empty.</string>
    <string name="press_the_green_button_below_to_add_new_products">Press The Green Button Below To Add New Products</string>
    <string name="product_overview">Product Overview</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="name_hint">Name</string>
    <string name="price_hint">Price</string>
    <string name="quantity_hint">Quantity</string>
    <string name="company_hint">Company</string>
    <string name="phone_hint">Phone</string>
    <string name="add_button_text">Add</string>
    <string name="stock_empty_msg">The Stock Is Empty!</string>
    <string name="not_provided">Not Provided</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="saving_done_msg">Product saved successfully</string>
    <string name="saving_error_msg">Error with saving product</string>
    <string name="update_done_msg">Product updated successfully</string>
    <string name="update_error_msg">Error with updating the product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_done_msg">Product deleted successfully</string>
    <string name="delete_error_msg">Error with deleting the product</string>
    <string name="exit_menu_item_title">Exit</string>
    <string name="up_menu_item_title">Back</string>
    <string name="product_name_required_msg">Product Overview Is Required</string>
    <string name="not_provided_or_stock_empty">Not Provided Or Stock Is Empty</string>
    <string name="price_colon">Price :</string>
    <string name="quantity_colon">Quantity :</string>
    <string name="supplier_name_colon">Supplier Name :</string>
    <string name="supplier_phone_number_colon">Supplier Phone Number :</string>
    <string name="product_details">Product Details</string>
    <string name="editor_update_mode_button_text">Update</string>
    <string name="add_price_here">Add the price here</string>
    <string name="add_quantity_here">Add the quantity here</string>
    <string name="add_supplier_name_here">Add the supplier name here</string>
    <string name="add_supplier_phone_number_here">Add the supplier phone number here</string>
    <string name="product_price_required_msg">Product Price Is Required</string>
    <string name="product_quantity_required_msg">Product Quantity Is Required</string>
    <string name="supplier_name_required_msg">Supplier Name Is Required</string>
    <string name="supplier_phone_number_required_msg">Supplier Phone Number Is Required</string>
</resources>
